fix(observatory): use align-items: flex-start

--- a/client/src/observatory/index.scss
+++ b/client/src/observatory/index.scss
@@ -178,7 +178,7 @@
 
   .observatory-results {
     .heading-and-actions {
-      align-items: start;
+      align-items: flex-start;
       display: flex;
       justify-content: space-between;
       margin-bottom: 3rem;
